# AI-Agents

./: .gitignore
.kiro/specs/linkedin-infographic-generator/: tasks.md
ai_finance_agent/: .gitignore  README.md  package-lock.json  package.json  setup.bat  start-backend.bat  start-frontend.bat
ai_finance_agent/app/: globals.css  page.tsx
ai_finance_agent/app/components/: ChatInterface.tsx  Header.tsx  LoadingSpinner.tsx  MessageBubble.tsx  Sidebar.tsx
ai_finance_agent/backend/: README.md  finance_agent_groq.py  main.py  requirements.txt  simple_main.py  test_groq.py
dj-automation-scheduler/: .gitignore  README.md
dj-automation-scheduler/backend/: .gitignore  database.py  dropbox_service.py  main.py  models.py  requirements.txt  schemas.py
dj-automation-scheduler/backend/routes/: admin.py  public.py
dj-automation-scheduler/frontend/: package-lock.json  package.json
dj-automation-scheduler/frontend/src/: App.tsx
email-voice-whatsapp/: .gitignore  README.md  requirements.txt
email-voice-whatsapp/src/: database.py
email-voice-whatsapp/src/api/: main.py
email-voice-whatsapp/src/config/: settings.py
email-voice-whatsapp/src/models/: __init__.py  base.py  email.py  message.py  user.py
email-voice-whatsapp/src/services/: ai_analyzer.py  email_monitor.py  whatsapp_service.py
email-voice-whatsapp/src/tasks/: celery_app.py  email_tasks.py
email_sorting/: .gitignore  README.md  debug_config.py  main.py  requirements.txt  test_workflow.py
email_sorting/docs/: GMAIL_SETUP.md  QUICKSTART.md
email_sorting/src/: __init__.py
email_sorting/src/agents/: __init__.py  classifier_agent.py  email_fetcher.py  email_parser.py  executor_agent.py  intent_agent.py  priority_agent.py  router_agent.py
email_sorting/src/cli/: __init__.py  commands.py
email_sorting/src/config/: __init__.py  prompts.py  settings.py
email_sorting/src/graph/: __init__.py  state.py  workflow.py
email_sorting/src/models/: __init__.py  email_schema.py
email_sorting/src/tools/: __init__.py  (+1 more)
facebook_automation/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  README.space  app.py  pyproject.toml  requirements.txt  verify_post.py
facebook_automation/src/facebook_automation/: crew.py  main.py
facebook_automation/src/facebook_automation/config/: agents.yaml  tasks.yaml
facebook_automation/src/facebook_automation/tools/: __init__.py  custom_tool.py
instagram_automation/: README.md  app.py  main.py  render.yaml  requirements.txt  scheduler.py
instagram_automation/src/: __init__.py
linkedin_automation/: .gitignore  README.md  get_linkedin_token.py  get_org_simple.py  get_org_urn_from_url.py  get_organization_urn.py  get_person_urn.py  get_token.bat  get_token_simple.py  pyproject.toml  run.bat  setup.bat  test.bat
linkedin_automation/src/linkedin_automation/: crew.py  main.py
linkedin_automation/src/linkedin_automation/config/: agents.yaml  tasks.yaml
linkedin_automation/src/linkedin_automation/tools/: custom_tool.py
meeting-assistant/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
meeting-assistant/src/: App.tsx
meeting-assistant/src-tauri/: Cargo.toml  errors.txt  make_icons.py  tauri.conf.json
meeting-assistant/src-tauri/icons/: icon.icns
meeting-assistant/src-tauri/src/: commands.rs  db.rs  main.rs  models.rs
validata/: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
validata/agents/: analytics_agent.py  survey_creator.py  validation_orchestrator.py
validata/backend/: __init__.py
validata/backend/api/: dependencies.py  main.py
validata/backend/api/routes/: analytics.py  responses.py  surveys.py  validation.py
validata/backend/core/: config.py  security.py
validata/backend/database/: connection.py
validata/backend/database/migrations/: env.py
validata/backend/database/migrations/versions/: 2024_01_16_1200-001_initial_schema.py
validata/backend/models/: analytics.py  response.py  survey.py  validation.py
validata/config/: database.yaml  mcp_config.json
validata/frontend/src/app/: page.tsx
validata/frontend/src/app/surveys/[id]/: page.tsx
validata/frontend/src/app/surveys/[id]/analytics/: page.tsx
validata/frontend/src/app/surveys/[id]/responses/: page.tsx
validata/frontend/src/app/surveys/create/: page.tsx
validata/frontend/src/app/templates/: page.tsx
validata/frontend/src/components/: AnalyticsDashboard.tsx  Navigation.tsx  ResponseForm.tsx  SurveyForm.tsx  SurveyList.tsx  ValidationStatus.tsx
validata/mcp_servers/analytics/: __init__.py  insights.py  server.py  tools.py
validata/mcp_servers/memory/: __init__.py  server.py  tools.py  vector_db.py
validata/mcp_servers/survey/: __init__.py  resources.py  server.py  tools.py
validata/mcp_servers/validation/: __init__.py  layers.py  server.py  tools.py
validata/scripts/: README.md  seed_data.py  setup_db.py  start_all.py
validata/tests/: test_database_properties.py
validata/tests/agents/: test_validation_orchestrator.py
validata/tests/integration/: test_survey_workflow.py
validata/tests/mcp_servers/: __init__.py  test_memory_server.py
whatsapp-calendar-reminder/: .gitignore  README.md  pyproject.toml
whatsapp-calendar-reminder/src/: __init__.py  celery_app.py  database.py  utils.py
whatsapp-calendar-reminder/src/api/: __init__.py  main.py
whatsapp-calendar-reminder/src/config/: __init__.py  config.py
whatsapp-calendar-reminder/src/integrations/: __init__.py  google_calendar.py  whatsapp_client.py
whatsapp-calendar-reminder/src/models/: __init__.py  base.py  calendar_event.py  reminder_log.py  sync_state.py  user_preference.py
whatsapp-calendar-reminder/src/services/: __init__.py  calendar_sync_service.py  message_service.py  reminder_engine.py
whatsapp-calendar-reminder/src/tasks/: __init__.py  celery_tasks.py
whatsapp_appointment_agent/: .gitignore  README.md  WHATSAPP_SETUP_GUIDE.md  __init__.py  agent.py  config.py  database.py  main.py  models.py  requirements.txt  scheduler.py  whatsapp_utils.py
work-insights-app/: README.md
(+91 files in other folders)
