[project]
name = "linkedin_automation"
version = "0.1.0"
description = "linkedin_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "google-generativeai>=0.3.0",
    "pillow>=10.0.0"
]

[project.scripts]
linkedin_automation = "linkedin_automation.main:run"
run_crew = "linkedin_automation.main:run"
train = "linkedin_automation.main:train"
replay = "linkedin_automation.main:replay"
test = "linkedin_automation.main:test"
run_with_trigger = "linkedin_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
