[project]
name = "whatsapp-calendar-reminder"
version = "1.0.0"
description = "Automated WhatsApp reminder system for Google Calendar events"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.116.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pytz>=2024.1",
]

[project.scripts]
start-api = "uvicorn src.api.main:app --reload"
start-worker = "celery -A src.celery_app worker --loglevel=info"
start-beat = "celery -A src.celery_app beat --loglevel=info"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
