[package]
name = "meeting-assistant"
version = "0.1.0"
description = "AI-powered cross-platform desktop meeting assistant"
authors = ["Meeting Assistant Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
    "shell-open",
    "dialog-all",
    "fs-all",
    "path-all",
    "window-all",
    "global-shortcut-all",
    "notification-all",
    "clipboard-all",
    "system-tray"
] }
tokio = { version = "1.34", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Audio processing
# cpal = "0.15"  # Uncomment when implementing audio capture

# Whisper bindings (local STT)
# whisper-rs = "0.10"  # Uncomment when implementing transcription

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
